--- a/finalProject/templates/index.html
+++ b/finalProject/templates/index.html
@@ -9,12 +9,13 @@
 
     INDEX
 
-    <form method="POST" action={{ url_for('index') }}>
+    <form method="POST" action={{ url_for('login') }}>
 
         <input type="text" name="account" placeholder="account" autofocus required>
         <input type="password" name="password" placeholder="password" required>
 
         <input type="submit" name="submit">
+        <input type="button" name="register" value="register" onclick="location.href = '{{ url_for('register') }}'"> 
 
     </form>
 
