--- a/finalProject/templates/myPage.html
+++ b/finalProject/templates/myPage.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>HELLO</title>
+    <link rel="icon" href="../images/icon.ico" type="image/x-icon">
+</head>
 
-</head>    
 <body>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
