--- a/finalProject/templates/bookshelf.html
+++ b/finalProject/templates/bookshelf.html
@@ -35,5 +35,7 @@
 
     <p id="account">{{account}}</p>
 
+    <input type="button" onclick="location.href = '{{ url_for('logout') }}'" value="登出">
+
 </body>
 </html>
