--- a/finalProject/templates_chiu/indexMain.css
+++ b/finalProject/templates_chiu/indexMain.css
@@ -11,6 +11,9 @@
             border: 3pt solid;
             text-align: center;
             font-size: 25px;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-bottom: 20px;
         }
         #tt
         {
@@ -24,7 +27,14 @@
             width: 90%;
             height: 30px; font-size: 25px;
             color: #A67F78;
-            border: #A67F78 1px solid;
+            border: #A67F78 1px solid;    
+            padding: 2px 10px 5px 10px;
+            margin-top: 2px;
+            margin-bottom: 5px;
+            box-sizing: border-box;
+        }
+        .textInput{
+            border-radius: 7px;
         }
         .message
         {
@@ -44,17 +54,12 @@
             margin-left: 5%;
         }
         input:focus{
-            outline: 1px #A67F78 solid;
-        }
-        .sub{
-            float: none;
-            width: 100px;
-            height: auto;
-            border: 0px;
+            outline: none;
             background-color: whitesmoke;
         }
-        .sub:hover{
-            background-color: #F1E0D6;
+        input::placeholder{
+            color:#A67F78;
+            opacity: 0.5;
         }
         .sub:focus{
             outline: 1px #A67F78 solid;
@@ -63,9 +68,66 @@
             color: #A67F78;
             text-decoration: none;
         }
+          /* GENERAL BUTTON STYLING */
+        button,
+        button::after {
+            -webkit-transition: all 0.3s;
+            -moz-transition: all 0.3s;
+            -o-transition: all 0.3s;
+            transition: all 0.3s;
+        }
+        
+        button {
+            background: none;
+            width: 50%;
+            font-size: 25px;
+            top:3px;
+            border: #A67F78 1px solid;;
+            color: #A67F78;
+            display: block;
+            position: relative;
+            text-transform: uppercase;
+        }
+        
+        button::before, button::after {
+            background: whitesmoke;
+            content: '';
+            position: absolute;
+            z-index: -1;
+        }
+        
+        button:hover {
+            font-weight: bold;
+        }
+        
+        .sub::after {
+            height: 100%;
+            left: 0;
+            top: 0;
+            width: 0;
+        }
+        
+        .sub:hover:after {
+            width: 100%;
+        }
+        /*end button*/
+         .inputButton{
+            float: right;
+            height: auto;
+            width: 50%;
+            border: 0px;
+            background-color: whitesmoke;
+        }
+        .inputButton:hover{
+            background-color: #F1E0D6;
+            font-weight: bold;
+        }
         /* a:hover{
         } */
         a:visited{
             color: #A67F78;
             text-decoration: none;
+        }
+        label{
+            position: relative;
         }
