--- a/finalProject/templates_chiu/indexMain.css
+++ b/finalProject/templates_chiu/indexMain.css
@@ -25,7 +25,7 @@
         }
         input{
             width: 90%;
-            height: 30px; font-size: 25px;
+            height: 30px; font-size: inherit;
             color: #A67F78;
             border: #A67F78 1px solid;    
             padding: 2px 10px 5px 10px;
@@ -45,6 +45,10 @@
         img{
             height: 60%;
             width: 60%;
+        }
+        img:hover{
+            height: 80%;
+            width: 80%;
         }
         .check{
             float: left;
@@ -80,6 +84,7 @@
         button {
             background: none;
             width: 50%;
+            height: 40px;
             font-size: 25px;
             top:3px;
             border: #A67F78 1px solid;;
@@ -99,7 +104,7 @@
         button:hover {
             font-weight: bold;
         }
-        
+
         .sub::after {
             height: 100%;
             left: 0;
@@ -109,6 +114,9 @@
         
         .sub:hover:after {
             width: 100%;
+        }
+        .afterSub:hover:after{
+            width: 0%;
         }
         /*end button*/
          .inputButton{
@@ -130,4 +138,44 @@
         }
         label{
             position: relative;
+        }
+
+        /*register*/
+        .message{
+            padding-left: 5%;
+            text-align: left;
+            color: red;
+        }
+        #regdiv{
+            width: 60%;
+            margin: 0px auto;
+            border: 3pt solid;
+            text-align: center;
+            font-size: 20px;
+            display: none;
+            position: relative;
+        }
+        #regdiv img{
+            width: 100%;
+            height: auto;
+            float: none;
+            display: block;
+            margin-left: 10%;
+        }
+        #regdiv img:hover{
+            
+        }
+        #regtt{
+            float:left;
+            margin-right: 5%;
+            position: relative;
+            text-align: center;
+            font-size: 25px;
+        }
+        .closebtn{
+            font-size: larger;
+            font-weight: bolder;
+            position: absolute;
+            top: 5px;
+            right: 15px;
         }
