--- a/finalProject/templates_chiu/test.css
+++ b/finalProject/templates_chiu/test.css
@@ -1,43 +1,60 @@
-body{
-    background-color: #e1dcd9;
-    color: #A67F78;
-}
-  /* GENERAL BUTTON STYLING */
-  button,
-  button::after {
-    -webkit-transition: all 0.3s;
-      -moz-transition: all 0.3s;
-    -o-transition: all 0.3s;
-      transition: all 0.3s;
+/* ---- reset ---- */
+
+body {
+    margin: 0;
+    font:normal 75% Arial, Helvetica, sans-serif;
   }
   
-  button {
-    background: none;
-    border: #A67F78 1px solid;;
-    color: #A67F78;
+  canvas {
     display: block;
-    position: relative;
-    text-transform: uppercase;
+    vertical-align: bottom;
   }
   
-  button::before, button::after {
-    background: whitesmoke;
-    content: '';
+  /* ---- particles.js container ---- */
+  
+  #particles-js {
     position: absolute;
-    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-color: #b61924;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
   }
   
-  button:hover {
+  /* ---- stats.js ---- */
+  
+  .count-particles{
+    background: #000022;
+    position: absolute;
+    top: 48px;
+    left: 0;
+    width: 80px;
+    color: #13E8E9;
+    font-size: .8em;
+    text-align: left;
+    text-indent: 4px;
+    line-height: 14px;
+    padding-bottom: 2px;
+    font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
   }
   
-  .sub::after {
-    height: 100%;
-    left: 0;
-    top: 0;
-    width: 0;
+  .js-count-particles{
+    font-size: 1.1em;
   }
   
-  .sub:hover:after {
-    width: 100%;
+  #stats,
+  .count-particles{
+    -webkit-user-select: none;
+  }
+  
+  #stats{
+    border-radius: 3px 3px 0 0;
+    overflow: hidden;
+  }
+  
+  .count-particles{
+    border-radius: 0 0 3px 3px;
   }
