--- a/finalProject/templates/bookshelf.html
+++ b/finalProject/templates/bookshelf.html
@@ -41,6 +41,7 @@
         {% endfor %}
     </ul>
 
+    <input type="button" onclick="location.href = '{{ url_for('upload') }}'" value="上傳">
     <input type="button" onclick="location.href = '{{ url_for('logout') }}'" value="登出">
 
 </body>
