--- a/finalProject/templates/upload.html
+++ b/finalProject/templates/upload.html
@@ -20,7 +20,7 @@
     </style>
 
 </head>
-<body>
+<body> 
     <h1>Upload</h1>
 
     {% with messages = get_flashed_messages() %}
@@ -32,8 +32,9 @@
     {% endwith %}
 
     <form method=post enctype=multipart/form-data>
-      <input type=file name=file>
-      <input type=submit value=Upload>
+        <input type="text" name="bookName" value="測試"><br>
+        <input type="file" name="file">
+        <input type="submit" value="Upload">
     </form>
 
     <br>
