--- a/finalProject/templates_chiu/static/upLoadSort.css
+++ b/finalProject/templates_chiu/static/upLoadSort.css
@@ -1,5 +1,9 @@
 .center {
-    display: inline-block;
+    /* display: inline-block; */
+    position: absolute;
+    float: left;
+    margin-left: 1%;
+    z-index: 3;
   }
   
   /** Custom Select **/
@@ -19,7 +23,7 @@
         /*初始選項*/
         position: relative;
         display: block;
-        width: 120px;
+        width: 150px;
         padding: 0 50px 0 0px;
         font-size: 18px;
         /* font-weight: 300; */
