--- a/finalProject/templates_chiu/static/indexMain.css
+++ b/finalProject/templates_chiu/static/indexMain.css
@@ -178,6 +178,7 @@
             position: absolute;
             top: 5px;
             right: 15px;
+            cursor: pointer;
         }
         hr{
             border:0px;
