--- a/finalProject/templates_chiu/static/myPageMain.css
+++ b/finalProject/templates_chiu/static/myPageMain.css
@@ -22,7 +22,16 @@
             padding: 3%;
             clear: both;
             height: 410px;
-            overflow: scroll;
+            overflow: auto;
+        }
+        #divvv.whole{
+            margin: 0px auto;
+            text-align: center;
+            font-size: 20px;
+            padding: 3%;
+            clear: both;
+            height: auto;
+            overflow: auto;
         }
         img{
             width: 100px;
@@ -115,6 +124,7 @@
         }
         .feature{
             width: 50px;
+            font-weight: bolder;
             height: 50px;
             border: 0px;
             background-color: whitesmoke;
@@ -122,8 +132,123 @@
         .feature:hover{
             background-color: #F1E0D6;
         }
+        .adjust{
+            width: auto;
+            height: auto;
+            background-color: whitesmoke;
+            font-weight: bolder;
+            border: 0.1em solid;
+            border-radius: 1em;
+            padding: 0.333em 1em 0.25em;
+            cursor: pointer;
+            box-shadow: 0 0.25em 1em -0.25em;
+            transition: color 150ms ease-in-out
+                , background-color 150ms ease-in-out
+                , transform 150ms ease-in-out;
+        }
+        .adjust:active {
+            transform: scale(0.95);
+        }
+        .adjust:focus{
+            outline: 0px;
+        }
+        #changeColor:hover{
+            color: mediumseagreen;
+        }
+        #goHome:hover{
+            color: cornflowerblue;
+        }
+        #closebtn:hover{
+            color: indianred;
+        }
+        #wholeScreen:hover{
+            color: gray;
+        }
+        #smile:hover{
+            color: #e3a857;    
+        }
+        #changeColor.selected{
+            background-color: mediumseagreen;
+            border-color: mediumseagreen;
+            color: whitesmoke;
+        }
+        #goHome.selected{
+            background-color: cornflowerblue;
+            border-color: cornflowerblue;
+            color: whitesmoke;
+        }
+        #closebtn.selected{
+            background-color: indianred;
+            border-color: indianred;
+            color: whitesmoke;
+        }
+        #wholeScreen.selected{
+            background-color: gray;
+            border-color: gray;
+            color: whitesmoke;
+        }
+        #smile.selected{
+            background-color: #e3a857;
+            border-color: #e3a857;
+            color: whitesmoke; 
+        }
+        #secondmenu{
+            display: none;
+        }
 
-
+        #colorPart{
+            display: none;
+            background-color: #e1dcd9;
+            text-align: center;
+            position: absolute;
+            bottom: 20%;
+            left: 5%;
+            width: 50%;
+            font-size: 40px;
+            font-weight: bolder;
+            float: left;
+            border-radius: 50%;
+            line-height: 80px;
+            border-radius: 40px;
+            border: 6px solid;
+            padding: 20px 20px 20px 20px;
+            overflow: auto;
+            height: 50%;
+            box-shadow: 0 0.25em 1em -0.25em #000000;
+        }
+        #colorPart span{
+            border-radius: 1em;
+            border: 3px solid;
+            margin-left: 0.1em;
+            margin-right: 0.1em;
+            padding-left: 0.25em;
+            padding-right: 0.25em;
+            padding-bottom: 0.1em;
+            cursor: pointer;
+        }
+        #closeColor{
+            background-color: #e1dcd9;
+            color: #A67F78;
+            box-shadow: 0 0.25em 1em -0.25em #333333;
+        }
+        #smallScreen{
+            display: none;
+            position: absolute;
+            top: 30px;
+            right: 20px;
+            color: whitesmoke;
+            font-size: 40px;
+            font-weight: bolder;
+            border: 0px; 
+            background: none;
+        }
+        #smallScreen:focus{
+            outline: 0px;
+        }
+        #smallScreen:hover{
+            color: #A67F78;
+            font-size: 45px;
+        }
 .eyeType{
     background-color: RGB(168,178,158);
     color: black;
