--- a/finalProject/templates_chiu/static/upLoad.css
+++ b/finalProject/templates_chiu/static/upLoad.css
@@ -1,5 +1,6 @@
 *{
-    font-family: 'Noto Serif TC', serif;
+     /* font-family: 'Noto Serif TC', serif; */
+     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
     body{
         background-color: #e1dcd9;
